--- a/html/template/alert.html
+++ b/html/template/alert.html
@@ -1149,8 +1149,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex flex-col flex-wrap w-full gap-2 px-4 py-3 rounded bg-primary-light text-primary" role="alert"&gt;
        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
    &lt;/div&gt; 
@@ -1182,8 +1182,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex flex-col flex-wrap w-full gap-2 px-4 py-3 border rounded border-primary text-primary" role="alert"&gt;
        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
    &lt;/div&gt;
@@ -1215,8 +1215,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex flex-col flex-wrap w-full gap-2 px-4 py-3 text-white rounded bg-success" role="alert"&gt;
        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
    &lt;/div&gt;
@@ -1251,8 +1251,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex items-center w-full px-4 py-3 text-white rounded bg-warning" role="alert"&gt;
        +SVG_ICON("Info-Circle","w-[1.25rem] h-[1.25rem] stroke-white mr-2")
        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
@@ -1294,8 +1294,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-secondary text-secondary lg:flex-col lg:items-start 2xl:justify-between 2xl:items-center 2xl:gap-2 2md:flex-row 2md:items-center sm:flex-col sm:items-start" role="alert"&gt;
        &lt;div class="flex"&gt;
            +SVG_ICON("Check-Square","w-[1.25rem] h-[1.25rem] stroke-secondary mr-2")
@@ -1342,8 +1342,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-primary lg:flex-col lg:justify-start lg:items-start lg:gap-2 2md:flex-row 2md:justify-between 2md:items-center sm:flex-col sm:justify-start sm:items-start" role="alert"&gt;
      &lt;p&gt; Space running out &lt;/p&gt;
      &lt;div&gt;
@@ -1388,8 +1388,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class=".flex flex-col gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class=".flex flex-col gap-2"&gt; 
    &lt;div class="flex w-full px-4 py-3 text-white rounded bg-info" role="alert"&gt;
      &lt;div&gt;+SVG_ICON("Download","w-[1.25rem] h-[1.25rem] stroke-white mr-2")&lt;/div&gt;
      &lt;div&gt;
@@ -1434,8 +1434,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark "><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="flex w-full px-4 py-3 text-white rounded bg-danger" role="alert"&gt;
      &lt;div&gt;+SVG_ICON("Danger","w-[1.25rem] h-[1.25rem] stroke-white mr-2")&lt;/div&gt;
      &lt;div&gt;
