--- a/html/template/avatars.html
+++ b/html/template/avatars.html
@@ -1132,7 +1132,7 @@
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Sizes</h3>
-                    <p>Use the  <strong>.w-[size] </strong> class to add custom size for avatar.</p>
+                    <p>Use the<strong>.w-[size]</strong> class to add custom size for avatar.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
                       <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
@@ -1144,10 +1144,10 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]">
                         <div class="avatar">
-                          <div class="w-28 rounded"> <img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                          <div class="w-28 rounded"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                         </div>
                         <div class="avatar">
-                          <div class="w-24 rounded"> <img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                          <div class="w-24 rounded"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                         </div>
                         <div class="avatar">
                           <div class="w-20 rounded"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
@@ -1158,8 +1158,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="rounded w-28"&gt;
       &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1217,8 +1217,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="rounded-none avatar"&gt;
     &lt;div class="w-28 "&gt;
       &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1284,8 +1284,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="relative overflow-visible rounded w-28"&gt;
       &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1368,8 +1368,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="items-center justify-center avatar-group"&gt;
     &lt;div class="border-white avatar rounded-xl"&gt;
      &lt;div class="w-24"&gt;
@@ -1448,8 +1448,8 @@
                           <div class="avatar border-white rounded-3xl border-[0.125rem]">
                             <div class="w-20"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                           </div>
-                          <div class="avatar placeholder bg-gray-light border-white border-[0.125rem]">
-                            <div class="w-16"><span class="text-xs font-bold text-title">26+</span></div>
+                          <div class="avatar placeholder bg-gray-light border-white border-[0.125rem] dark:bg-sidebar-dark">
+                            <div class="w-16"><span class="text-xs font-bold">26+</span></div>
                           </div>
                         </div>
                         <div class="avatar-group -space-x-6 justify-center items-center">
@@ -1459,8 +1459,8 @@
                           <div class="avatar border-white border-[0.125rem]">
                             <div class="w-16"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                           </div>
-                          <div class="avatar placeholder bg-gray-light border-white border-[0.125rem]">
-                            <div class="w-12"><span class="text-xs font-bold text-title">26+</span></div>
+                          <div class="avatar placeholder bg-gray-light border-white border-[0.125rem] dark:bg-sidebar-dark">
+                            <div class="w-12"><span class="text-xs font-bold">26+</span></div>
                           </div>
                         </div>
                         <div class="avatar-group -space-x-6 justify-center">
@@ -1470,17 +1470,17 @@
                           <div class="avatar border-white border-[0.125rem]">
                             <div class="w-12"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                           </div>
-                          <div class="avatar placeholder bg-gray-light border-white border-[0.125rem]">
-                            <div class="w-12"><span class="text-xs font-bold text-title">26+</span></div>
+                          <div class="avatar placeholder bg-gray-light border-white border-[0.125rem] dark:bg-sidebar-dark">
+                            <div class="w-12"><span class="text-xs font-bold"> 26+</span></div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="items-center justify-center avatar-group"&gt;
-    &lt;div class="border-white rounded-none avatar"&gt;
+    &lt;div class="border-white  rounded-none avatar"&gt;
      &lt;div class="w-24"&gt;
        &lt;img src="../../image.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
@@ -1490,7 +1490,7 @@
        &lt;img src="../../image.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
-     &lt;div class="border-white avatar"&gt;
+     &lt;div class="border-white avatar dark:bg-sidebar-dark"&gt;
      &lt;div class="w-16"&gt;
         &lt;span class="text-xs font-bold text-title"/&gt; 26+
       &lt;/div&gt;
@@ -1506,7 +1506,7 @@
        &lt;img src="../../image.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
-     &lt;div class="border-white avatar"&gt;
+     &lt;div class="border-white avatar dark:bg-sidebar-dark"&gt;
      &lt;div class="w-12"&gt;
         &lt;span class="text-xs font-bold text-title"/&gt; 26+
       &lt;/div&gt;
@@ -1522,7 +1522,7 @@
        &lt;img src="../../image.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
-    &lt;div class="border-white avatar"&gt;
+    &lt;div class="border-white avatar dark:bg-sidebar-dark"&gt;
      &lt;div class="w-12"&gt;
        &lt;span class="text-xs font-bold text-title"/&gt; 26+
       &lt;/div&gt;
@@ -1578,8 +1578,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative overflow-visible rounded w-14"&gt;
        &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1633,47 +1633,47 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]">
                         <div class="avatar inline-flex">
-                          <div class="w-14 rounded flex justify-center items-center bg-gray-light"><span class="text-3xl">B</span></div>
+                          <div class="w-14 rounded flex justify-center items-center bg-gray-light dark:text-sidebar-dark"><span class="text-3xl">B</span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-12 rounded flex justify-center items-center bg-gray-light"><span class="text-2xl">A</span></div>
+                          <div class="w-12 rounded flex justify-center items-center bg-gray-light dark:text-sidebar-dark"><span class="text-2xl">A</span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-11 rounded flex justify-center items-center bg-gray-light"><span class="text-xl"> C </span></div>
+                          <div class="w-11 rounded flex justify-center items-center bg-gray-light dark:text-sidebar-dark"><span class="text-xl"> C </span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-10 rounded flex justify-center items-center bg-gray-light"><span class="text-lg"> K </span></div>
+                          <div class="w-10 rounded flex justify-center items-center bg-gray-light dark:text-sidebar-dark"><span class="text-lg"> K </span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-9 rounded flex justify-center items-center bg-gray-light"><span class="text-sm"> Y</span></div>
+                          <div class="w-9 rounded flex justify-center items-center bg-gray-light dark:text-sidebar-dark"><span class="text-sm"> Y</span></div>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="inline-flex avatar"&gt;
-    &lt;div class="flex items-center justify-center rounded w-14 bg-gray-light"&gt;
+    &lt;div class="flex items-center justify-center rounded w-14 bg-gray-light dark:text-sidebar-dark"&gt;
       &lt;span class="text-3xl"&gt; B &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="inline-flex avatar"&gt;
-     &lt;div class="flex items-center justify-center w-12 rounded bg-gray-light"&gt;
+     &lt;div class="flex items-center justify-center w-12 rounded bg-gray-light dark:text-sidebar-dark"&gt;
        &lt;span class="text-2xl"&gt; A &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="inline-flex avatar"&gt;
-     &lt;div class="flex items-center justify-center rounded w-11 bg-gray-light"&gt;
+     &lt;div class="flex items-center justify-center rounded w-11 bg-gray-light dark:text-sidebar-dark"&gt;
       &lt;span class="text-xl"&gt; C &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="inline-flex avatar"&gt;
-     &lt;div class="flex items-center justify-center w-10 rounded bg-gray-light"&gt;
+     &lt;div class="flex items-center justify-center w-10 rounded bg-gray-light dark:text-sidebar-dark"&gt;
        &lt;span class="text-lg"&gt; K &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt; 
    &lt;div class="inline-flex avatar"&gt;
-     &lt;div class="flex items-center justify-center rounded w-9 bg-gray-light"&gt;
+     &lt;div class="flex items-center justify-center rounded w-9 bg-gray-light dark:text-sidebar-dark"&gt;
        &lt;span class="text-sm"&gt; Y &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt;
@@ -1737,8 +1737,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div&gt;
       +SVG_ICON("Heart","w-[3.125rem] h-[3.125rem] 
