--- a/assets/postcss/layout/_header.css
+++ b/assets/postcss/layout/_header.css
@@ -18,4 +18,7 @@
       }
     }
   }
+  header{
+    @apply mb-[7.5rem] lg:mb-[calc(125px_+_(90_-_125)_*_((100vw_-_320px)_/_(1920_-_320)))] md:mb-[6.875rem];
+  }
 }
