--- a/assets/pug/data/all-data.pug
+++ b/assets/pug/data/all-data.pug
@@ -4,12 +4,14 @@
 include ./add-to-cart.pug
 include ./component-menu.pug
 include ./dropdown.pug
+include ./form-table-menu.pug
 include ./general-menu.pug
 include ./icons-list.pug
 include ./legend.pug
 include ./list-type.pug
 include ./app-menu.pug
 include ./message.pug
+include ./miscellaneous-menu.pug
 include ./notification.pug
 include ./new-product.pug
 include ./page-menu.pug
