--- a/assets/pug/data/app-menu.pug
+++ b/assets/pug/data/app-menu.pug
@@ -4,136 +4,100 @@
 -
    var APP_MENU=
       [
-
          {
-            title:"Email App",
-            icon:"Message",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-
-               {
-                  title:"Email",
-                  url:"email.html",
-               },    
-               {
-                  title:"Email Read",
-                  url:"email-read.html",
-               },   
-               {
-                  title:"Email Compose",
-                  url:"email-compose.html",
-               },   
-            ]
-
-
-         },
-         {
-            title:"Ecommerce",
-            icon:"Buy",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-
-               {
-                  title:"Shop",
-                  url:"shop.html",
-               },    
-               {
-                  title:"Product",
-                  url:"product.html",
-               },   
-               {
-                  title:"Cart",
-                  url:"cart.html",
-               },   
-               {
-                  title:"Checkout",
-                  url:"checkout.html",
-               },   
-               {
-                  title:"Invoice",
-                  url:"invoice.html",
-               },   
-               {
-                  title:"Invoice Preview",
-                  url:"invoice-preview.html",
-               },   
-               {
-                  title:"Wishlist",
-                  url:"wishlist.html",
-               },   
-            ]
-
-
-         },
-         {
-            title:"Project",
-            icon:"Paper-Plus",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-
-               {
-                  title:"Project List",
-                  url:"project-list.html",
-               },    
-               {
-                  title:"Project Create",
-                  url:"project-create.html",
-               },   
-               {
-                  title:"Target",
-                  url:"target.html",
-               },   
-               {
-                  title:"Budget",
-                  url:"budget.html",
-               },   
-               {
-                  title:"User",
-                  url:"user.html",
-               },   
-               {
-                  title:"Activity",
-                  url:"activity.html",
-               },   
-            ]
-
-
-         },
-         {
-            title:"Chat App",
             icon:"Chat",
-            url:"chat-app.html",
-
-         },
-
-         {
-            title:"Tasks",
-            icon:"Check-Circle",
-            url:"tasks.html",
-
-         },
-         {
-            title:"Social App",
-            icon:"3-User",
-            url:"social-App.html",
-
+            title:"Chat",
+            url:"javascript:void(0)",
+            menu:
+               [
+                  {
+                     title:"Chat App",
+                     url:"chat-app.html",
+                  },
+                  {
+                     title:"Video App",
+                     url:"video-app.html",
+                  },
+               ]
          },
          {
-            title:"Todo App",
-            icon:"Check-List",
-            url:"social-App.html",
-
+            icon:"Calendar",
+            title:"Calendar",
+            url:"calendar.html",
          },
          {
-            title:"Video Chat",
-            icon:"Video",
-            url:"to-do-app.html",
-
+            icon:"Bag",
+            title:"Ecommerce",
+            url:"javascript:void(0)",
+            menu:
+               [
+                  {
+                     title:"Add Product",
+                     url:"add-product.html",
+                  },
+                  {
+                     title:"Cart",
+                     url:"cart.html",
+                  },
+                  {
+                     title:"Checkout",
+                     url:"checkout.html",
+                  },
+                  {
+                     title:"Invoice",
+                     url:"invoice.html",
+                  },
+                  {
+                     title:"Invoice Preview",
+                     url:"invoice-preview.html",
+                  },
+                  {
+                     title:"Invoice Create",
+                     url:"invoice-create.html",
+                  },
+                  {
+                     title:"Product",
+                     url:"product.html",
+                  },
+                  {
+                     title:"Shop",
+                     url:"shop.html",
+                  },
+                  {
+                     title:"Wishlist",
+                     url:"wishlist.html",
+                  },
+               ]
          },
-
-
-
+         {
+            icon:"Message",
+            title:"Email",
+            url:"email.html",
+         },
+         {
+            icon:"Paper",
+            title:"Kanban Board",
+            url:"kanban-board.html",
+         },
+         {
+            icon:"Time-Circle",
+            title:"Todo",
+            url:"todo.html",
+         },
+         {
+            icon:"2-User",
+            title:"User",
+            url:"javascript:void(0)",
+               menu:
+                  [
+                     {
+                        title:"User Cards",
+                        url:"user-card.html",
+                     },
+                     {
+                        title:"User Profile",
+                        url:"user-profile.html",
+                     },
+                  ]
+         },
       ]
