--- a/assets/pug/data/general-menu.pug
+++ b/assets/pug/data/general-menu.pug
@@ -12,80 +12,10 @@
 
          },
          {
-            icon:"3-User",
-            title:"Friendly Dashboard",
-            url:"friendly.html",
-            subTitle:"Social connectivity",
+            icon:"Home",
+            title:"Unique Dashboard",
+            url:"index.html",
+            subTitle:"Over view of all",
 
          },
-         {
-            icon:"Ticket",
-            title:"Minimal Dashboard",
-            url:"minimal.html",
-            subTitle:"Minimal over view ",
-
-         },
-         {
-            icon:"Calendar",
-            title:"Material Dashboard",
-            url:"material.html",
-            subTitle:"Material design",
-
-         },
-         {
-            icon:"Bag",
-            title:"Shopping Place Dashboard",
-            url:"shopping-place.html",
-            subTitle:"Ecommerce shop place",
-
-         },
-         {
-            icon:"Activity",
-            title:"Retro Dashboard",
-            url:"retro.html",
-            subTitle:"Monochrome mode eye friendly",
-
-         },
-         {
-            icon:"Graph",
-            title:"Crypto Dashboard",
-            url:"crypto.html",
-            subTitle:"Crypto curacy analysis",
-
-         },
-         {
-            icon:"Upload",
-            title:"Advanced Dashboard",
-            url:"advanced.html",
-            subTitle:"Mordent analysis",
-
-         },
-         //- {
-         //-    icon:"Paper",
-         //-    title:"Reports Dashboard",
-         //-    url:"reports.html",
-         //-    subTitle:"All over Report",
-
-         //- },
-         //- {
-         //-    icon:"Add-User",
-         //-    title:"Support Dashboard",
-         //-    url:"support.html",
-         //-    subTitle:"Help and support ",
-
-         //- },
-         //- {
-         //-    icon:"Folder",
-         //-    title:"Elegance Dashboard",
-         //-    url:"elegance.html",
-         //-    subTitle:"interactive ",
-
-         //- },
-         //- {
-         //-    icon:"Chart",
-         //-    title:"Project Dashboard",
-         //-    url:"project.html",
-         //-    subTitle:"Manage Project", 
-
-         //- },
       ]
