--- a/assets/pug/components/general-menu.pug
+++ b/assets/pug/components/general-menu.pug
@@ -1,34 +1,14 @@
 
 // General menu
 div(class="grid grid-cols-12 gap-2")
-   div(class="col-span-8")
-      ul(class="columns-2 gap-[10px] p-[15px]") 
+   div(class="col-span-12")
+      ul(class="gap-[10px] p-[15px]") 
          each dashboard in DASHBOARDS_LIST
-            li(class="p-2 rounded-5 transition-all duration-300 hover:bg-gray-light")
+            li(class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light")
                a(href=`${dashboard.url}`).flex.items-center.gap-2 
                   div(class=`p-2 rounded-5  border border-primary`)
                      +SVG_ICON(`${dashboard.icon}`,"w-5 h-5 stroke-primary")
                   div
-                     h4(class="text-xs font-semibold text-title capitalize line-clamp-1")= dashboard.title
+                     h4(class="text-xs font-semibold capitalize text-title line-clamp-1")= dashboard.title
                      span(class="text-xs font-medium text-content line-clamp-1")= dashboard.subTitle
-   div(class="col-span-4 bg-gray-light p-[15px]")
-
-      h4(class="text-base font-semibold text-title mb-3") More Dashboard                     
-      ul(class="flex flex-col gap-2")
-         li
-            a(href="reports.html" )
-               span(class="transition-all duration-300 hover:text-primary text-xs font-semibold text-title capitalize") 
-                  |  Reports Dashboard
-         li
-            a(href="support.html" )
-               span(class="transition-all duration-300 hover:text-primary text-xs font-semibold text-title capitalize") 
-                  |  Support Dashboard
-         li
-            a(href="elegance.html" ) 
-               span(class="transition-all duration-300 hover:text-primary text-xs font-semibold text-title capitalize") 
-                  |    Elegance Dashboard
-         li
-            a(href="project.html" )
-               span(class="transition-all duration-300 hover:text-primary text-xs font-semibold text-title capitalize") 
-                  |    Project Dashboard 
 
