--- a/assets/pug/data/component-menu.pug
+++ b/assets/pug/data/component-menu.pug
@@ -11,49 +11,49 @@
             menu:
             [ 
                {
-                  title:"Typography",
-                  url:"typography.html",
-               },    
-               {
-                  title:"Avatar",
-                  url:"avatar.html",
-               },    
-               {
-                  title:"Buttons",
-                  url:"buttons.html",
-               },    
-               {
-                  title:"Badges",
-                  url:"badge.html",
-               },    
-               {
-                  title:"Progress",
-                  url:"progress.html",
-               },    
-               {
-                  title:"Modal",
-                  url:"modal.html",
-               },    
-               {
                   title:"Alert",
-                  url:"alert.html",
-               },    
+                  url:"./alert.html",
+               },
                {
-                  title:"Dropdown",
-                  url:"dropdown.html",
-               },    
+                  title:"Avatars",
+                  url:"./avatars.html",
+               },
+               {
+                  title:"Badge",
+                  url:"./badge.html",
+               },
+               {
+                  title:"Button",
+                  url:"./button.html",
+               },
                {
                   title:"Collapse",
-                  url:"collapse.html",
-               },    
-               {
-                  title:"Tooltip",
-                  url:"tooltip.html",
-               },    
+                  url:"./collapse.html",
+               },
                {
                   title:"Divider",
-                  url:"divider.html",
-               }, 
+                  url:"./divider.html",
+               },
+               {
+                  title:"Dropdown",
+                  url:"./dropdown.html",
+               },
+               {
+                  title:"Modal",
+                  url:"./modal.html",
+               },
+               {
+                  title:"Progress",
+                  url:"./progress.html",
+               },
+               {
+                  title:"Tooltip",
+                  url:"./tooltip.html",
+               },
+               {
+                  title:"Typography",
+                  url:"./typography.html",
+               }
             ]
          },
          {
@@ -63,142 +63,60 @@
             menu:
             [ 
                {
-                  title:"Breadcrumbs",
-                  url:"breadcrumb.html",
-               },    
-               {
-                  title:"Pagination",
-                  url:"pagination.html",
-               },    
+                  title:"Breadcrumb",
+                  url:"./breadcrumb.html",
+               },
                {
                   title:"Carousel",
-                  url:"carousel.html",
-               },    
+                  url:"./carousel.html",
+               },
                {
                   title:"Countdown",
-                  url:"countdown.html",
-               },    
-               {
-                  title:"Radial progress",
-                  url:"radial-progress.html",
-               },    
-               {
-                  title:"Swap",
-                  url:"swap.html",
-               },    
+                  url:"./countdown.html",
+               },
                {
                   title:"Indicator",
-                  url:"indicator.html",
-               },    
+                  url:"./indicator.html",
+               },
                {
                   title:"Mask",
-                  url:"mask.html",
-               },    
+                  url:"./mask.html",
+               },
                {
-                  title:"Stack",
-                  url:"stack.html",
-               },    
+                  title:"Pagination",
+                  url:"./pagination.html",
+               },
                {
-                  title:"Toast",
-                  url:"toast.html",
-               },    
-               {
-                  title:"Steps",
-                  url:"steps.html",
-               },    
-               {
-                  title:"Tabs",
-                  url:"tabs.html",
-               },    
+                  title:"Radial Progress",
+                  url:"./radial-progress.html",
+               },
                {
                   title:"Rating",
-                  url:"rating.html",
-               },     
+                  url:"./rating.html",
+               },
+               {
+                  title:"Stack",
+                  url:"./stack.html",
+               },
+               {
+                  title:"Steps",
+                  url:"./steps.html",
+               },
+               {
+                  title:"Swap",
+                  url:"./swap.html",
+               },
+               {
+                  title:"Swiper Slider",
+                  url:"./swiper-slider.html",
+               },
+               {
+                  title:"Tabs",
+                  url:"./tabs.html",
+               },
             ]
          },
-         {
-            title:"Form Components",
-            icon:"Plus",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-               {
-                  title:"Input and Textarea",
-                  url:"input-textarea.html",
-               },    
-               {
-                  title:"Checkbox and Radio",
-                  url:"checkbox-radio.html",
-               },    
-               {
-                  title:"Select",
-                  url:"select.html",
-               },    
-               {
-                  title:"Switch",
-                  url:"switch.html",
-               },    
-               {
-                  title:"Range",
-                  url:"range.html",
-               },    
-               {
-                  title:"Input Group ",
-                  url:"input-group.html",
-               },    
 
-            ]
-         },
-         {
-            title:"Builders",
-            icon:"Edit-Square",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-               {
-                  title:"Form Builder 1",
-                  url:"form-builder1.html",
-               },    
-               {
-                  title:"Form Builder 2",
-                  url:"form-builder2.html",
-               },   
-               {
-                  title:"Form Builder 2",
-                  url:"form-builder2.html",
-               },   
-               {
-                  title:"Form Builder 3",
-                  url:"form-builder3.html",
-               },   
-
-            ]
-         },
-         {
-            title:"Animation",
-            icon:"Scan",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-               {
-                  title:"Animate",
-                  url:"animate.html",
-               },    
-               {
-                  title:"Scroll Reveal",
-                  url:"scroll-reveal.html",
-               },   
-               {
-                  title:"AOS animation",
-                  url:"aos.html",
-               },   
-               {
-                  title:"Tilt Animation",
-                  url:"tilt.html",
-               },   
-
-            ]
-         },
          {
             title:"Icons",
             icon:"Danger-Circle",
@@ -206,72 +124,27 @@
             menu:
             [ 
                {
-                  title:"Fontawesome Icon",
-                  url:"fontawesome-icon.html",
-               },    
+                  title:"Feather",
+                  url:"./feather.html",
+               },
                {
-                  title:"Iconly Icons",
-                  url:"iconly-icon.html",
-               },   
+                  title:"Font Awesome",
+                  url:"./fontawesome.html",
+               },
                {
-                  title:"Feather Icons",
-                  url:"feather.html",
-               },   
-               {
-                  title:"Thimify Icon",
-                  url:"thimify-icon.html",
-               },   
-               {
-                  title:"Whether Icon",
-                  url:"whether-icon.html",
-               },   
-
+                  title:"Iconly",
+                  url:"./iconly.html",
+               }, 
             ]
          },
          {
-            title:"Chart",
+            title:"Apex Chart",
             icon:"Chart",
-            url:"javascript:void(0)",
-            menu:
-            [ 
-
-               {
-                  title:"Apex Chart",
-                  url:"apex-chart.html",
-               },    
-               {
-                  title:"Echarts",
-                  url:"echarts.html",
-               },   
-               {
-                  title:"Google Chart",
-                  url:"google-chart.html",
-               },   
-               {
-                  title:"Sparkline Chart",
-                  url:"sparkline-chart.html",
-               },   
-               {
-                  title:"Flot Chart",
-                  url:"flot-chart.html",
-               },   
-               {
-                  title:"Knob Chart",
-                  url:"knob-chart.html",
-               },   
-               {
-                  title:"Morris Chart",
-                  url:"morris-chart.html",
-               },   
-               {
-                  title:"Chatjs Chart",
-                  url:"chatjs-chart.html",
-               },   
-               {
-                  title:"Peity Chart",
-                  url:"peity-chart.html",
-               },    
-
-            ]
+            url:"apex-chart.html",
+         },
+         {
+            title:"Wow Animation",
+            icon:"Scan",
+            url:"wow-animation.html",
          },
       ]
