--- a/assets/pug/layout/header/language-dropdown.pug
+++ b/assets/pug/layout/header/language-dropdown.pug
@@ -1,8 +1,8 @@
 // Language Start 
 div.language-select(class="dropdown group")
-  button#language-select.flex.items-center(class="max-w-[87px] min-w-[87px] gap-[11px]")
-    img(class="w-[35px] h-auto" src="../../assets/images/flag/en.svg" alt="flag") 
-    span.flex.items-center.gap-1(class="text-lg font-bold 4xl:text-base dark:text-white")
+  button#language-select.flex.items-center(class="max-w-[87px] min-w-[87px] md:min-w-[47px] gap-[11px]")
+    img(class="w-[35px] sm:w-[30px] h-auto" src="../../assets/images/flag/en.svg" alt="flag") 
+    span.flex.items-center.gap-1(class="text-lg font-bold 4xl:text-base dark:text-white md:hidden")
       | En
     +SVG_ICON("Fill-Arrow","w-[6px] h-[4px] stroke-title group-hover:rotate-180 duration-300 transition-all dark:stroke-white")
   ul.language-menu.dropdown-menu.flex.flex-col.gap-3(class="!min-w-[145px]")
